--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "API Client for api.rewindkit.com",
   "main": "index.js",
+  "scripts": {
+    "test": "mocha --ui qunit --bail --reporter list tests/*.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/choreo-io/rewind-kit.git"
@@ -15,5 +18,9 @@
   "homepage": "https://github.com/choreo-io/rewind-kit#readme",
   "dependencies": {
     "request": "^2.81.0"
+  },
+  "devDependencies": {
+    "mocha": "^3.3.0",
+    "nock": "^9.0.13"
   }
 }
