--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API Client for api.rewindkit.com",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --ui qunit --bail --reporter list tests/*.js"
+    "test": "node ./node_modules/mocha/bin/mocha --ui qunit --bail --reporter list tests/*.js"
   },
   "repository": {
     "type": "git",
